[package]
name = "instrument_spot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
actix-cors = "0.7.0"
rand = "0.8"
chrono = "0.4"
futures-util = "0.3.30"
actix = "0.13.5"
actix-ws = "0.3.0"
rmp-serde = "1.3.0"
shared_memory = "0.12.4"
dashmap = "6.1.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
shared_structs_spot = { path = "../shared_structs_spot" }
futures = "0.3.30"
uuid = "1.10.0"